move global css settings to html

--- a/railcard.html
+++ b/railcard.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Rail Card</title>
     <link rel="stylesheet" href="railcard.css">
+    <style>
+        html {
+            background-image: url(https://i.ibb.co/cvBHZ1m/imgonline-com-ua-Blur-5xm-AWe7-Ks-T1-Y.png);
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-attachment: fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        #railcard #railcard_headbar {
+            background-color: rgba(0,0,0,0.2);
+        }
+    </style>
 </head>
 <body>
     <railcard></railcard>
